--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@babel/preset-env": "^7.23.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.23.9"
   }
 }
